--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,17 +85,28 @@
         </div>
 
         <div id="board_container" ng-if="user.isPlaying">
-          <h3><span ng-style="{'color': user.game.owner.symbol === user.game.turn? 'green':'red'}">{{user.game.owner.username}}</span> ({{user.game.owner.symbol}}) VS <span ng-show="!user.game.opponent">Waiting for opponent...</span><span ng-style="{'color': user.game.opponent.symbol === user.game.turn? 'green':'red'}">{{user.game.opponent.username}}</span>            ({{user.game.opponent.symbol}})</h3>
+          <h3><span ng-style="{'color': user.game.owner.symbol === user.game.turn? 'green':'red'}">{{user.game.owner.username}}</span>            ({{user.game.owner.symbol}})<br>VS<br><span ng-show="!user.game.opponent">Waiting for opponent...</span>
+            <span ng-style="{'color': user.game.opponent.symbol === user.game.turn? 'green':'red'}">{{user.game.opponent.username}}</span>            ({{user.game.opponent.symbol}})</h3>
           <button class="btn-danger" ng-click="requestGameReset();" ng-disabled="!user.game.opponent">Request Game Reset</button>
+
+
+
+          <div id="container_game_result">
+            <h2 ng-if="user.game.winner === 'O'">{{user.game.owner.username}} WINS THE GAME!!!</h2>
+            <h2 ng-if="user.game.winner === 'X'">{{user.game.opponent.username}} WINS THE GAME!!!</h2>
+            <h2 ng-if="user.game.winner === 'draw'">Game Ended in Draw!!!</h2>
+          </div>
+
           <span style="display:inline;" ng-repeat="tile in user.game.gameBoard track by $index">
           <br class="newline-board" ng-if="$index % user.game.rowSize === 0">
-        <button ng-class="{'btn-success btn-lg gameTile': tile.value==='-','btn-danger btn-lg gameTile':tile.value == 'O', 'btn-primary btn-lg gameTile': tile.value==='X'}" ng-click="updateBoard($index);"><b>{{tile.value}}</b></button>
-        </span>
-          <h2 ng-if="user.game.winner">{{user.game.winner}} WINS THE GAME!!!</h2>
+        <button ng-class="{'btn-success btn-lg gameTile': tile.value==='-','btn-danger btn-lg gameTile':tile.value == 'O', 'btn-primary btn-lg gameTile': tile.value==='X'}" ng-click="updateBoard($index);">
+          <b>{{tile.value}}</b>
+        </button>
+    
+
         </div>
 
       </div>
-
 
       <div id="chat_container" class="col-xs-6">
 
