--- a/views/index.ejs
+++ b/views/index.ejs
@@ -140,6 +140,7 @@
       <li>Client: AngularJS</li>
       <li>Server: Express.js with Socket.io</li>
     </ul>
+    <a href="https://github.com/bureyburey/tictactoe-ng-express-socketio">GitHub Repo</a>
 
   </script>
 
